nov 27 swap photography and montblanc

--- a/work.html
+++ b/work.html
@@ -19,7 +19,6 @@
 
 	<title>Maggie Liu Portfolio</title>
 	<link rel="stylesheet" href="css/globals.css" />
-  <link rel="stylesheet" href="css/styleguide.css" />
   <link rel="stylesheet" href="css/style.css" />
   <link rel="stylesheet" href="css/fonts.css" />
   <link rel="stylesheet" href="css/grid.css" />
@@ -51,29 +50,29 @@
               <div style="display: flex; flex-direction: column; align-items: flex-start;">
                 <div class="gallery-caption">
                   <h2 class="text-wrapper-4">2024</h2>
-                  <h2 class="text-wrapper-4">MARINA ABRAMOVIĆ</h2>
+                  <h2 class="text-wrapper-4">MARINA ABRAMOVIĆ ✦</h2>
                 </div>
                 <span class="text-wrapper-5">[microsite]</span>
               </div>
             </a>
 
-            <a href="photography.html" class="frame-3" data-index="2">
-              <div style="display: flex; flex-direction: column; align-items: flex-start;">
-                <div class="gallery-caption">
-                  <h2 class="text-wrapper-4">2024</h2>
-                  <h2 class="text-wrapper-4">PHOTOGRAPHY</h2>
-                </div>
-                <span class="text-wrapper-5">[visual experiments]</span>
-              </div>
-            </a>
-
-            <a href="montblanc.html" class="frame-3" data-index="3">
+            <a href="montblanc.html" class="frame-3" data-index="2">
               <div style="display: flex; flex-direction: column; align-items: flex-start;">
                 <div class="gallery-caption">
                   <h2 class="text-wrapper-4">2023</h2>
                   <h2 class="text-wrapper-4">MONTBLANC DIGITAL PAPER</h2>
                 </div>
                 <span class="text-wrapper-5">[e-ink experience]</span>
+              </div>
+            </a>
+
+            <a href="photography.html" class="frame-3" data-index="3">
+              <div style="display: flex; flex-direction: column; align-items: flex-start;">
+                <div class="gallery-caption">
+                  <h2 class="text-wrapper-4">2023</h2>
+                  <h2 class="text-wrapper-4">PHOTOGRAPHY ✦</h2>
+                </div>
+                <span class="text-wrapper-5">[visual experiments]</span>
               </div>
             </a>
 
@@ -111,7 +110,7 @@
               <div style="display: flex; flex-direction: column; align-items: flex-start;">
                 <div class="gallery-caption">
                   <h2 class="text-wrapper-4">2019</h2>
-                  <h2 class="text-wrapper-4">ALICE'S ADVENTURES IN WONDERLAND</h2>
+                  <h2 class="text-wrapper-4">ALICE'S ADVENTURES IN WONDERLAND ✦</h2>
                 </div>
                 <span class="text-wrapper-5">[print]</span>
               </div>
@@ -134,15 +133,15 @@
             </div>
 
             <div class="grid-row--column grid-col-2of12">
-              <a href="photography.html" class="hover-swap" data-index="2">
-                <img src="media/index/dolomiti_before.png" class="default-img" alt="Dolomiti">
-                <img src="media/index/dolomiti_after.png" class="hover-img" alt="Alternate image">
-              </a>  
-
-              <a href="montblanc.html" class="hover-swap" data-index="3">
+              <a href="montblanc.html" class="hover-swap" data-index="2">
                 <img src="media/index/mb_before_1.png" class="default-img" alt="Montblanc">
                 <img src="media/index/mb_after_1.png" class="hover-img" alt="Alternate image">
               </a> 
+
+              <a href="photography.html" class="hover-swap" data-index="3">
+                <img src="media/index/dolomiti_before.png" class="default-img" alt="Dolomiti">
+                <img src="media/index/dolomiti_after.png" class="hover-img" alt="Alternate image">
+              </a>  
             </div>
 
             <div class="grid-row--column grid-col-3of12">
