--- a/marinaAbramovic.html
+++ b/marinaAbramovic.html
@@ -29,7 +29,7 @@
     <div class="grid-row">
         <section class="writeup-section grid-col-5of12">
 
-            <div class="frame-3" data-index="6">
+            <div class="frame-3">
               <div style="display: flex; flex-direction: column; align-items: flex-start;">
                 <div class="gallery-caption">
 					<h2 class="text-wrapper-4">2024</h2>
@@ -43,7 +43,7 @@
             <h1 class="project-title">MARINA ABRAMOVIĆ</h1>
         -->
             <p>
-                During an internal design hackathon, I had to create an attention-grabbing first fold for a virtual (made-up) event landing page. The goal was to showcase the event’s key details, highlight its value proposition, and incorporate interactive elements that spark user interest and participation.
+                During an internal design hackathon, I had to create an attention-grabbing first fold for a virtual (made-up) event landing page. The goal was to showcase the event's key details, highlight its value proposition, and incorporate interactive elements that spark user interest and participation.
             </p>
 
             <ul class="project-specs">
@@ -65,7 +65,7 @@
 
     <footer class="hidden">
         <div class="site-footer" id="next-project">
-            <a href="photography.html" id="next-project-link">
+            <a href="montblanc.html" id="next-project-link">
                 <div class="next-project-content">
                     <div class="next-project-text">
                         <p>Next Project</p>
