--- a/montblanc.html
+++ b/montblanc.html
@@ -30,7 +30,7 @@
     <div class="grid-row">
         <section class="writeup-section grid-col-5of12">
 
-            <div class="frame-3" data-index="6">
+            <div class="frame-3">
               <div style="display: flex; flex-direction: column; align-items: flex-start;">
                 <div class="gallery-caption">
 					<h2 class="text-wrapper-4">2023</h2>
@@ -499,7 +499,7 @@
 
     <footer class="hidden">
         <div class="site-footer" id="next-project">
-            <a href="toyota.html" id="next-project-link">
+            <a href="photography.html" id="next-project-link">
                 <div class="next-project-content">
                     <div class="next-project-text">
                         <p>Next Project</p>
