--- a/photography.html
+++ b/photography.html
@@ -31,10 +31,10 @@
     <div class="grid-row" style="width:calc(100% - 24px) ">
         <section class="writeup-section grid-col-5of12">
 
-            <div class="frame-3" data-index="6">
+            <div class="frame-3">
               <div style="display: flex; flex-direction: column; align-items: flex-start;">
                 <div class="gallery-caption">
-					<h2 class="text-wrapper-4">2024</h2>
+					<h2 class="text-wrapper-4">2023</h2>
                   	<h2 class="text-wrapper-4">PHOTOGRAPHY</h2>
                 </div>
                 <span class="text-wrapper-5">[visual experiments]</span>
@@ -231,7 +231,7 @@
 
     <footer class="hidden">
         <div class="site-footer" id="next-project">
-            <a href="montblanc.html" id="next-project-link">
+            <a href="toyota.html" id="next-project-link">
                 <div class="next-project-content">
                     <div class="next-project-text">
                         <p>Next Project</p>
