--- a/toyota.html
+++ b/toyota.html
@@ -30,7 +30,7 @@
     <div class="grid-row">
         <section class="writeup-section grid-col-5of12">
 
-            <div class="frame-3" data-index="6">
+            <div class="frame-3">
               <div style="display: flex; flex-direction: column; align-items: flex-start;">
                 <div class="gallery-caption">
 					<h2 class="text-wrapper-4">2022</h2>
