nov 28 bg image captions fixed keyboard

--- a/about.html
+++ b/about.html
@@ -57,9 +57,9 @@
       <!-- Fullscreen background carousel -->
       <div class="about-carousel" aria-hidden="false">
         <div class="about-slides">
-          <div class="slide" data-src="media/about/voorlinden.jpeg" data-caption="[Richard Serra, Open Ended]" style="background-image:url('media/about/voorlinden.jpeg')"></div>
+          <div class="slide" data-src="media/about/voorlinden.jpeg" data-caption="[Open Ended, Richard Serra]" style="background-image:url('media/about/voorlinden.jpeg')"></div>
           <div class="slide" data-src="media/about/dolomiti_1.png" data-caption="[Berggasthaus Pederü, Dolomiti, Italy]" style="background-image:url('media/about/dolomiti_1.png')"></div>
-          <div class="slide" data-src="media/about/marina.png" data-caption="[Marina Abramović, The Current]" style="background-image:url('media/about/marina.png')"></div>
+          <div class="slide" data-src="media/about/marina.png" data-caption="[The Current,Marina Abramović]" style="background-image:url('media/about/marina.png')"></div>
           <div class="slide" data-src="media/about/dolomiti_2.png" data-caption="[Forcella del Lago, Dolomiti, Italy]" style="background-image:url('media/about/dolomiti_2.png')"></div>
           <div class="slide" data-src="media/about/panorama.png" data-caption="[Panorama Ridge, BC, Canada]" style="background-image:url('media/about/panorama.png')"></div>
         </div>
