--- a/toyota.html
+++ b/toyota.html
@@ -44,13 +44,13 @@
             <h1 class="project-title">TOYOTA</h1>
         -->
             <p>
-                The ask: To enhance the digital navigation for Toyota and Lexus across their 40+ European markets, fix existing errors, and provide an intuitive and hassle-free way of discovering the world of Toyota
+                The ask: To enhance the digital navigation for Toyota and Lexus across their 40+ European markets, fix existing errors, and provide an intuitive and hassle-free way of discovering the world of Toyota.
             </p>
             <p>
                 The challenge: To design an elevated navigation system that addresses various market requirements and consumer needs.
             </p>
             <p>
-                The ambition: To balance discoverability (the user's ability to find items) and eﬃciency (the user's ability to quickly find items without errors)
+                The ambition: To balance discoverability (the user's ability to find items) and eﬃciency (the user's ability to quickly find items without errors).
             </p>
 
             <ul class="project-specs">
@@ -59,7 +59,7 @@
               <li>User Research and Testing</li>
               <li>Cross-Market Strategy</li>
               <li>Accessibility and Usability</li>
-          </ul>
+            </ul>
         </section>
 
         <!--
@@ -100,17 +100,20 @@
                 <p>
                     We began the project with a collaborative workshop involving key market stakeholders to align on goals, surface constraints, and uncover opportunities. The session was structured to address both user experience and business needs.
                 </p>
-                <p>
-                    This structured approach helped us:
-                </p>
-                <ol class="numbered-list">
-                    <li>Identified localization constraints, such as language length and content variations across regions</li>
-                    <li>Explored UX triggers and structural considerations, including differences in behavior across desktop and mobile</li>
-                    <li>Defined measurable goals, setting performance metrics to track navigation success</li>
-                    <li>Mapped business opportunities, aligning potential features with broader strategic objectives</li>
-                    <li>Gathered likes and dislikes, learning from current pain points and successes across platforms</li>
-                    <li>Benchmarked references, analyzing best-in-class navigation models to inform our approach</li>
-                </ol>
+
+                <div class="list-wrapper">
+                    <p>
+                        This structured approach helped us:
+                    </p>
+                    <ol class="numbered-list">
+                        <li>Identify localization constraints, such as language length and content variations across regions</li>
+                        <li>Explore UX triggers and structural considerations, including differences in behavior across desktop and mobile</li>
+                        <li>Define measurable goals, set performance metrics to track navigation success</li>
+                        <li>Map business opportunities, align potential features with broader strategic objectives</li>
+                        <li>Gather likes and dislikes, learning from current pain points and successes across platforms</li>
+                        <li>Benchmark references, analyze best-in-class navigation models to inform our approach</li>
+                    </ol>
+                </div>
             </section>
 
             <section class="visuals-section grid-col-8of12">
@@ -139,22 +142,81 @@
             <section class="writeup-section grid-col-4of12">
                 <h2 class="section-title">Prioritization & Roadmapping</h2>
                 <p>
-                    In a follow-up session, we focused on prioritizing the insights gathered from Workshop 1. Using the RICE framework (Reach, Impact, Confidence, Effort) to objectively determine which should be tackled first—minimizing emotional or gut-based decision-making.
+                    In a follow-up session, we focused on prioritizing the insights collected during the workshop by first categorizing similar ideas. Using the RICE framework (Reach, Impact, Confidence, Effort), we objectively determined which initiatives should be tackled first, minimizing emotional or gut-based decision-making.
                 </p>
-                <p>
-                    Together we:
-                </p>
-                <ol class="numbered-list">
-                    <li>Estimate impact vs. effort across proposed features</li>
-                    <li>Align on short- and long-term priorities</li>
-                    <li>Lay the foundation for a clear and actionable roadmap</li>
-                </ol>
+
+                <div class="list-wrapper">
+                    <p>
+                        Together we:
+                    </p>
+                    <ol class="numbered-list">
+                        <li>Estimated impact vs. effort across proposed features</li>
+                        <li>Aligned on short- and long-term priorities</li>
+                        <li>Layed out the foundation for a clear and actionable roadmap</li>
+                    </ol>
+                </div>
             </section>
 
             <section class="visuals-section grid-col-8of12">
                 <div class="project-image">
                     <img src="media/toyota/img/prio_1.png">
                 </div>
+            </section>
+        </div>
+    </div>
+
+    <div class="wrapper">
+        <div class="grid-row">
+            <section class="writeup-section grid-col-4of12">
+                <h2 class="section-title">Industry Perspective</h2>
+                <p>
+                    We researched over 35 best-in-class sites across industry sectors and pulled the ones most relevant to DXP. Each site was looked at through a lens of five categories identified through earlier sessions that encompass the benchmarking elements.
+                </p>
+
+                <div class="list-wrapper">
+                    <p>
+                        Industry sectors:
+                    </p>
+                    <ul>
+                        <li>Automotive</li>
+                        <li>Fashion</li>
+                        <li>Hospitality</li>
+                        <li>Arts & Culture</li>
+                        <li>Tourism</li>
+                        <li>Retail</li>
+                        <li>Beauty</li>
+                    </ul>
+                </div>
+
+                <div class="list-wrapper">
+                    <p>
+                        Benchmarking categories:
+                    </p>
+                    <ul>
+                        <li>Ease of Access</li>
+                        <li>Discovery</li>
+                        <li>Content</li>
+                        <li>Design</li>
+                        <li>Interaction</li>
+                    </ul>
+                </div>
+            </section>
+
+            <section class="visuals-section grid-col-8of12">
+                <div class="project-image">
+                    <img src="media/toyota/img/industry_1.png">
+                </div>
+            </section>
+        </div>
+    </div>
+
+    <div class="wrapper">
+        <div class="grid-row">
+            <section class="writeup-section grid-col-4of12">
+                <h2 class="section-title">Takeaways</h2>
+                <p>
+                    Our benchmarking led us to several key takeaways.
+                </p>
             </section>
         </div>
 
@@ -196,43 +258,9 @@
     <div class="wrapper">
         <div class="grid-row">
             <section class="writeup-section grid-col-4of12">
-                <h2 class="section-title">Revolution Approach</h2>
-                <p>
-                    A top to bottom approach that looks at the larger system that needs to be resolved thereby requiring the redesign and testing of several components. The outcome is a refreshed navigation system.
-                </p>
-            </section>
-
-            <section class="visuals-section grid-col-8of12">
-                <div class="project-image">
-                    <img src="media/toyota/img/revolution_1.png">
-                </div>
-            </section>
-        </div>
-    </div>
-
-    <div class="wrapper">
-        <div class="grid-row">
-            <section class="writeup-section grid-col-4of12">
-                <h2 class="section-title">Industry Perspective</h2>
-                <p>
-                    We researched over 35 best-in-class sites across industry sectors and pulled the ones most relevant to DXP. Each site was looked at through a lens of five categories identified through earlier sessions that encompass the benchmarking elements.
-                </p>
-            </section>
-
-            <section class="visuals-section grid-col-8of12">
-                <div class="project-image">
-                    <img src="media/toyota/img/industry_1.png">
-                </div>
-            </section>
-        </div>
-    </div>
-
-    <div class="wrapper">
-        <div class="grid-row">
-            <section class="writeup-section grid-col-4of12">
                 <h2 class="section-title">Audience Perspective</h2>
                 <p>
-                    We drew on consumer research and qualitative data to generate actionable insights into user behaviours, needs, and expectations.
+                    We worked with a data-insights partner who provided valuable consumer and qualitative data to help generate meaningful insights.
                 </p>
             </section>
 
@@ -265,17 +293,102 @@
 
     <div class="wrapper">
         <div class="grid-row">
-            <section class="writeup-section grid-col-5of12">
-                <h2 class="section-title">Final Designs</h2>
+            <section class="writeup-section grid-col-4of12">
+                <h2 class="section-title">Revolution Approach</h2>
                 <p>
-                    After testing and validating several design directions via unmoderated online user sessions, we arrived at a final solution ready for handoff to development.
+                    Our proposed approach to designing the navigation follows a top-down methodology, examining the broader system that requires improvement. This requires the redesign and testing of multiple components, resulting in a refreshed and cohesive navigation system.
+                </p>
+            </section>
+
+            <section class="visuals-section grid-col-8of12">
+                <div class="project-image">
+                    <img src="media/toyota/img/revolution_1.png">
+                </div>
+            </section>
+        </div>
+    </div>
+
+    <div class="wrapper">
+        <div class="grid-row">
+            <section class="writeup-section grid-col-4of12">
+                <h2 class="section-title">Testing & Validation</h2>
+                <p>
+                    While exploring multiple design directions, we first conducted unmoderated online A/B tests with targeted participants, providing early feedback on different design options and supporting design rationale.
+                <p>
+                    We then validated our most significant updates on the lives sites: comparing the existing navigation with the redesigned version, and A/B tests on variations that received mixed results in the unmoderated tests. This allowed us to observe real user behaviour and gather more definite insights before finalizing the changes.
+                </p>
+            </section>
+
+            <section class="visuals-section grid-col-8of12">
+                <div class="project-image">
+                    <img src="media/toyota/img/testing_1.png">
+                </div>
+            </section>
+        </div>
+
+        <div class="grid-row" style="width:calc(100% - 24px)">
+            <section class="grid-col-8of12">
+                <div class="project-image">
+                    <img src="media/toyota/img/testing_2.png">
+                </div>
+            </section>
+            <section class="grid-col-4of12">
+                <div class="project-image">
+                    <img src="media/toyota/img/testing_3.png">
+                </div>
+            </section>
+        </div>
+    </div>
+
+    <div class="wrapper">
+        <div class="grid-row">
+            <section class="writeup-section grid-col-5of12">
+                <h2 class="section-title">Final Toyota Designs</h2>
+            </section>
+        </div>
+        <div class="grid-row">
+            <section class="grid-col-12of12">
+                <div class="project-image">
+                    <img src="media/toyota/img/t_final_1.png">
+                </div>
+            </section>
+        </div>
+
+        <div class="grid-row">
+            <section class="grid-col-6of12">
+                <div class="project-image">
+                    <img src="media/toyota/img/t_final_2.png">
+                </div>
+            </section>
+            <section class="grid-col-6of12">
+                <div class="project-image">
+                    <img src="media/toyota/img/t_final_3.png">
+                </div>
+            </section>
+        </div>
+
+        <div class="grid-row">
+            <section class="grid-col-6of12">
+                <div class="project-image">
+                    <img src="media/toyota/img/t_final_4.png">
+                </div>
+            </section>
+        </div>
+    </div>
+
+    <div class="wrapper">
+        <div class="grid-row">
+            <section class="writeup-section grid-col-5of12">
+                <h2 class="section-title">Final Lexus Designs</h2>
+                <p>
+                    We adapted the solution for Lexus, keeping the core structure and information architecture consistent while refining the visual language and tone to reflect their premium experience.
                 </p>
             </section>
         </div>
         <div class="grid-row">
             <section class="grid-col-12of12">
                 <div class="project-image">
-                    <img src="media/toyota/img/mobile_1.png">
+                    <img src="media/toyota/img/l_final_1.png">
                 </div>
             </section>
         </div>
@@ -283,12 +396,12 @@
         <div class="grid-row">
             <section class="grid-col-6of12">
                 <div class="project-image">
-                    <img src="media/toyota/img/desktop_1.png">
+                    <img src="media/toyota/img/l_final_2.png">
                 </div>
             </section>
             <section class="grid-col-6of12">
                 <div class="project-image">
-                    <img src="media/toyota/img/desktop_2.png">
+                    <img src="media/toyota/img/l_final_3.png">
                 </div>
             </section>
         </div>
@@ -296,7 +409,7 @@
         <div class="grid-row">
             <section class="grid-col-6of12">
                 <div class="project-image">
-                    <img src="media/toyota/img/desktop_3.png">
+                    <img src="media/toyota/img/l_final_4.png">
                 </div>
             </section>
         </div>
@@ -359,7 +472,7 @@
             </div>
             <div class="body">
                 <p>
-                    This was a significant change, requiring open communication with all markets, careful consideration of localization and language constraints, and ongoing feedback to understand what works, and what doesn't — in each region, resulting in a solution that's flexible yet true to the core strategy and information architecture.
+                    This was a significant change, requiring open communication with all markets, careful consideration of localization and language constraints, and ongoing feedback. It also involved close collaboration and regular check-ins with the development team to review all design details and ensure their implementation matched the intended design. The result is a solution that is flexible yet remains true to the core strategy and information architecture.
                 </p>
             </div>
         </div>
