nov 30 browser icon in every page

--- a/about.html
+++ b/about.html
@@ -16,14 +16,14 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+  <link rel="icon" type="image/svg+xml" href="media/index/browser_tab.svg">
+
   <title>About</title>
 	<link rel="stylesheet" href="css/globals.css" />
-  <link rel="stylesheet" href="css/styleguide.css" />
   <link rel="stylesheet" href="css/style.css" />
   <link rel="stylesheet" href="css/fonts.css" />
   <link rel="stylesheet" href="css/grid.css" />
-  <link href="https://fonts.googleapis.com/css?family=Space+Mono&display=swap" rel="stylesheet">
-
+  
 </head>
 
 
