--- a/photography.html
+++ b/photography.html
@@ -15,12 +15,13 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <link rel="icon" type="image/svg+xml" href="media/index/browser_tab.svg">
+
 	<title>Photography</title>
 	<link rel="stylesheet" href="css/globals.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="css/grid.css">
-
 
 </head>
 
