--- a/toyota.html
+++ b/toyota.html
@@ -15,6 +15,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <link rel="icon" type="image/svg+xml" href="media/index/browser_tab.svg">
+
 	<title>Toyota</title>
 	<link rel="stylesheet" href="css/globals.css">
     <link rel="stylesheet" href="css/style.css">
