nov 30 closed all video tags in photography

--- a/photography.html
+++ b/photography.html
@@ -51,7 +51,7 @@
 
         <section class="visuals-section grid-col-7of12">
             <div class="project-video">
-                <video id="project-video" src="media/photography/vd/mirror.mp4" loop>
+                <video id="project-video" src="media/photography/vd/mirror.mp4" loop></video>
                 <!--<div class="play-icon">TESTING</div>
                 <div class="stop-icon">❚❚</div>-->
             </div>
@@ -66,7 +66,7 @@
         </div>
         <div class="grid-col-4of12">
             <div class="project-video">
-                <video id="project-video" src="media/photography/vd/dolo_2.mp4" loop>
+                <video id="project-video" src="media/photography/vd/dolo_2.mp4" loop></video>
                     <div class="play-icon">▶</div>
                     <div class="stop-icon">❚❚</div>
                 </div>
@@ -81,7 +81,7 @@
     <div class="grid-row" style="width:calc(100% - 48px)">
         <div class="grid-col-4of12">
             <div class="project-video">
-                <video id="project-video" src="media/photography/vd/dolo_4.mp4" loop>
+                <video id="project-video" src="media/photography/vd/dolo_4.mp4" loop></video>
             </div>
         </div>
         <div class="grid-col-4of12">
@@ -89,7 +89,7 @@
         </div>
         <div class="grid-col-4of12">
             <div class="project-video">
-                <video id="project-video" src="media/photography/vd/dolo_6.mp4" loop>
+                <video id="project-video" src="media/photography/vd/dolo_6.mp4" loop></video>
             </div>
         </div>
     </div>
@@ -97,7 +97,7 @@
     <div class="grid-row" style="width:calc(100% - 48px)">
         <div class="grid-col-4of12">
             <div class="project-video">
-                <video id="project-video" src="media/photography/vd/dolo_7.mp4" loop>
+                <video id="project-video" src="media/photography/vd/dolo_7.mp4" loop></video>
             </div>
         </div>
         <div class="grid-col-4of12">
@@ -107,7 +107,7 @@
         </div>
         <div class="grid-col-4of12">
             <div class="project-video">
-                <video id="project-video" src="media/photography/vd/dolo_9.mp4" loop>
+                <video id="project-video" src="media/photography/vd/dolo_9.mp4" loop></video>
             </div>
         </div>
     </div>
@@ -128,7 +128,7 @@
     <div class="grid-row">
         <div class="grid-col-12of12">
             <div class="project-video">
-                <video id="project-video" src="media/photography/vd/china_3.mp4" loop>
+                <video id="project-video" src="media/photography/vd/china_3.mp4" loop></video>
             </div>
         </div>
     </div>
@@ -144,12 +144,12 @@
     <div class="grid-row" style="width:calc(100% - 48px)">
         <div class="grid-col-4of12">
             <div class="project-video">
-                <video id="project-video" src="media/photography/vd/sno_1.mp4" loop>
+                <video id="project-video" src="media/photography/vd/sno_1.mp4" loop></video>
             </div>
         </div>
         <div class="grid-col-8of12">
             <div class="project-video">
-                <video id="project-video" src="media/photography/vd/sno_2.mp4" loop>
+                <video id="project-video" src="media/photography/vd/sno_2.mp4" loop></video>
             </div>
         </div>
     </div>
@@ -157,17 +157,17 @@
     <div class="grid-row" style="width:calc(100% - 48px)">
         <div class="grid-col-4of12">
             <div class="project-video">
-                <video id="project-video" src="media/photography/vd/sno_3.mp4" loop>
+                <video id="project-video" src="media/photography/vd/sno_3.mp4" loop></video>
             </div>
         </div>
         <div class="grid-col-4of12">
             <div class="project-video">
-                <video id="project-video" src="media/photography/vd/sno_4.mp4" loop>
+                <video id="project-video" src="media/photography/vd/sno_4.mp4" loop></video>
             </div>
         </div>
         <div class="grid-col-4of12">
             <div class="project-video">
-                <video id="project-video" src="media/photography/vd/sno_5.mp4" loop>
+                <video id="project-video" src="media/photography/vd/sno_5.mp4" loop></video>
             </div>
         </div>
     </div>
@@ -175,7 +175,7 @@
     <div class="grid-row" style="width:calc(100% - 48px)">
         <div class="grid-col-4of12">
             <div class="project-video">
-                <video id="project-video" src="media/photography/vd/sno_6.mp4" loop>
+                <video id="project-video" src="media/photography/vd/sno_6.mp4" loop></video>
             </div>
         </div>
         <div class="grid-col-4of12">
@@ -185,7 +185,7 @@
         </div>
         <div class="grid-col-4of12">
             <div class="project-video">
-                <video id="project-video" src="media/photography/vd/water_2.mp4" loop muted>
+                <video id="project-video" src="media/photography/vd/water_2.mp4" loop muted></video>
             </div>
         </div>
     </div>
@@ -198,7 +198,7 @@
         </div>
         <div class="grid-col-8of12">
             <div class="project-video">
-                <video id="project-video" src="media/photography/vd/water_3.mp4" loop muted>
+                <video id="project-video" src="media/photography/vd/water_3.mp4" loop muted></video>
             </div>
         </div>
     </div>
@@ -206,7 +206,7 @@
     <div class="grid-row" style="width:calc(100% - 48px)">
         <div class="grid-col-4of12">
             <div class="project-video">
-                <video id="project-video" src="media/photography/vd/water_5.mp4" loop>
+                <video id="project-video" src="media/photography/vd/water_5.mp4" loop></video>
             </div>
         </div>
         <div class="grid-col-4of12">
@@ -216,7 +216,7 @@
         </div>
         <div class="grid-col-4of12">
             <div class="project-video">
-                <video id="project-video" src="media/photography/vd/water_7.mp4" loop muted>
+                <video id="project-video" src="media/photography/vd/water_7.mp4" loop muted></video>
             </div>
         </div>
     </div>
@@ -224,7 +224,7 @@
     <div class="grid-row" style="width:calc(100% - 48px)">
         <div class="grid-col-4of12">
             <div class="project-video">
-                <video id="project-video" src="media/photography/vd/water_9.mp4" loop>
+                <video id="project-video" src="media/photography/vd/water_9.mp4" loop></video>
             </div>
         </div>
     </div>
