--- a/montblanc.html
+++ b/montblanc.html
@@ -443,7 +443,7 @@
 
     </div>
 
-    <div class="grid-row">
+    <div class="grid-row" style="width:calc(100% - 24px)">
         <section class="writeup-section grid-col-4of12">
             <h2 class="section-title">Writing</h2>
             <p>
