nov 30 jde JDE's brand portfolio

--- a/jde.html
+++ b/jde.html
@@ -46,7 +46,7 @@
         -->
 
             <p>
-                With a rapidly growing portfolio of coffee brands worldwide, Jacobs Douwe Egberts needed a scalable design solution to unify their digital presence while preserving each brand's unique identity. Many of the brands lacked formal design guidelines, leading to inconsistent user experiences and inefficient development cycles.
+                With a rapidly growing portfolio of coffee brands worldwide, Jacobs Douwe Egberts (JDE) needed a scalable design solution to unify their digital presence while preserving each brand's unique identity. Many of the brands lacked formal design guidelines, leading to inconsistent user experiences and inefficient development cycles.
             </p>
             <p>
                 I was brought in as a product designer to lead the creation and implementation of a white-label design system — one that can be easily adapted across 40+ brands, streamline collaboration between design and development, and support rapid onboarding of new brands into their ecosystem.
@@ -160,7 +160,7 @@
 
     <div class="grid-row">
         <section class="grid-col-12of12">
-            <h2 class="section-title" style="font-weight: bold;">Brand Portfolio</h2>
+            <h2 class="section-title" style="font-weight: bold;">JDE's Brand Portfolio</h2>
             <br>
             <br>
             <div class="visual-grid">
