--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
 
   <link rel="icon" type="image/svg+xml" href="media/index/browser_tab.svg">
 
-  <title>About</title>
+  <title>About | Maggie Liu - Product Designer</title>
 	<link rel="stylesheet" href="css/globals.css" />
   <link rel="stylesheet" href="css/style.css" />
   <link rel="stylesheet" href="css/fonts.css" />
