--- a/alice.html
+++ b/alice.html
@@ -17,7 +17,7 @@
 
     <link rel="icon" type="image/svg+xml" href="media/index/browser_tab.svg">
 
-	<title>Alice's Adventures in Wonderland</title>
+	<title>Alice's Adventures in Wonderland | Maggie Liu - Product Designer</title>
 	<link rel="stylesheet" href="css/globals.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/fonts.css">
