--- a/lufthansa.html
+++ b/lufthansa.html
@@ -17,7 +17,7 @@
 
 	<link rel="icon" type="image/svg+xml" href="media/index/browser_tab.svg">
 
-	<title>Lufthansa</title>
+	<title>Lufthansa | Maggie Liu - Product Designer</title>
 	<link rel="stylesheet" href="css/globals.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/fonts.css">
