dec 2 about writeup

--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
  
       <div class="about-paragraph">
         <p>
-          Hey, I'm Maggie! A Product Designer based in Amsterdam. I love turning ideas into things you can see, touch, and experience — whether digital or physical. Guided by curiosity, I'm always exploring, questioning, and seeking fresh perspectives. Inspiration comes from everywhere: bustling cities, quiet mountain villages, and even chance conversations. <a href="mailto:maggieliujx@gmail.com">Let's chat!</a>
+          HHey! I'm Maggie, a Product Designer in Amsterdam. I've always had the need to touch and tinker with everything (museums are dangerous 👀). I love finding the little surprises in an experience—micro-interactions, easter eggs, the tiny details that make me go “oooh, that's fun!”. My inspiration comes from everywhere: busy city streets, quiet mountain villages, or even random conversations. → Talk to me ← →<a href="mailto:maggieliujx@gmail.com"> Talk to me </a>←
         </p>
         <br>
         <h2 style="font-family: spaceMono; font-weight: 600;">EXPERIENCES</h2>
